--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "quizz app for check knowledge of nodejs",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "amit\\",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
-    "nodemon": "^3.1.0"
+    "express": "^4.19.2"
   }
 }
